Added my nice avatar =)

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -15,7 +15,7 @@
   <mat-drawer mode="side" opened #sidenav>
 
     <a class="profile-anchor" routerLink="/">
-      <img class="avatar mat-elevation-z8" src="https://source.unsplash.com/c_GmwfHBDzk/200x200" />
+      <img class="avatar mat-elevation-z8" src="https://avatars.githubusercontent.com/u/4313256?v=4" />
 
       <h4 class="name">
         Xaamin
