--- a/src/app/data-tables/table-usage/table-usage.component.html
+++ b/src/app/data-tables/table-usage/table-usage.component.html
@@ -13,4 +13,23 @@
   <table-pagination [data]="data"></table-pagination>
 </div>
 
+<div class="row">
+  <div class="column">
+    Goal:
+    <ul>
+      <li>Routing</li>
+      <li>Nested routing</li>
+      <li>Fetch data from JSON/REST api</li>
+      <li>Comunication from child to parent components (@Output)</li>
+      <li>Share data from parent to child components (@Input)</li>
+      <li>Action button state control based on events</li>
+      <li>Services usage</li>
+      <li>Control http request state with indicators</li>
+      <li>Modules (Feature modules and shared modules)</li>
+      <li>Usage of RxJS</li>
+      <li>Integration</li>
+    </ul>
+  </div>
+</div>
+
 <router-outlet></router-outlet>
